Add baseline of Hero Rater CSS.

--- a/main.css
+++ b/main.css
@@ -38,12 +38,12 @@ html {
     display: block;
   }
   a {
-    background: #262626;
+    /* background: #262626; */
     text-align: center;
     padding: 20px 0;
-    border-bottom: 1px solid #ddd;
+    /* border-bottom: 1px solid #ddd; */
     text-decoration: none;
-    color: #ccc;
+    color: white;
     font-weight: bold;
   }
   a:hover,
@@ -52,14 +52,24 @@ html {
     background: #e7e7e7;
   }
   .desktop {
-    display: block;
+    top: 13px;
+    right: 10vw;
+    position: absolute;
+    display: flex;
     overflow: hidden;
+    width: 100%;
+    justify-content: flex-end;
   }
+
   .desktop a {
-    width: 25%;
-    float: left;
-    border-right: 1px solid #ddd;
     box-sizing: border-box;
+    padding-left: 30px;
+    opacity: 0.9;
+    font-family: FiraSans-SemiBold;
+    font-size: 16px;
+    color: #FFFFFF;
+    letter-spacing: 0;
+    text-align: center;
   }
   .desktop a:last-child {
     border-right: none;
@@ -67,15 +77,8 @@ html {
   article {
     padding: 0 30px 15px;
   }
-  @media (max-width: 800px) {
-    .mobile {
-      display: block;
-    }
-    .desktop {
-      display: none;
-    }
-  }
-  
+
+
 
   /* HERO */
 
@@ -100,7 +103,7 @@ html {
   .logotype {
   opacity: 0.9;
   padding-left: 10px;
-  font-size: 12px;
+  font-size: 16px;
   font-weight: 800;
   color: #FFFFFF;
   text-align: center;
@@ -114,6 +117,7 @@ html {
     letter-spacing: 0;
     line-height: 52px;
     margin-top: 100px;
+      
   }
 
   .leadline {
@@ -168,3 +172,149 @@ html {
   border-radius: 27.5px;
   margin-left: 20px;
  }
+
+
+/* HERO: RATER */
+
+aside {
+ position: relative;
+ display: flex;
+ flex-direction: column;
+}
+
+.rater-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+
+.rating {
+  -webkit-text-stroke: 2px white;
+  font-family: FiraSans-Black;
+  font-size: 150px;
+  color: rgba(0,122,255,0.00);
+  letter-spacing: 20px;
+  text-align: right;
+   position: absolute;
+}
+
+
+/* BOTTOM CHUNK */
+.color-settings {
+  display: flex;
+  flex-direction: column; 
+}
+
+.color-input {
+	width: 95px;
+	background: #464646;
+	border: 1px solid #222;
+	box-shadow: 0 0 2px 0 rgba(0,0,0,0.20);
+	border-radius: 14.5px;
+	padding-top: 6px;
+	padding-bottom: 6px;
+	/* Input Font */
+	font-family: SFUIDisplay-Medium;
+	font-size: 13px;
+	color: #fff;
+	text-transform: uppercase;
+	letter-spacing: -0.08px;
+	text-align: center;
+}
+
+.input-wrapper {
+  position: relative;
+  float: right;
+}
+
+input[type='range'] {
+	-webkit-appearance: none;
+  }
+  
+  .slider-input {
+	margin-top: 20px;
+	appearance: none;
+	border-radius: 3em;
+	height: 2em;
+	width: 200px;
+	/* border: 2px #fff solid;  */
+	box-shadow: 0px 0px 10px 0px rgba(0,0,0,.25);
+	background: linear-gradient(to right,  #000000 0%,#0A7FFF 50%,#ffffff 100%);
+  }
+  
+  input:focus {
+	outline: none;
+  }
+
+  input[type='range']::-webkit-slider-thumb {
+    -webkit-appearance: none !important;
+	background: white;
+	/* border: 2px white solid; */
+    border-radius: 100%;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,.25);
+    height: 2em;
+    width: 2em;
+    transition: all 250ms ease-in-out;
+}
+
+input[type='range']::webkit-slider-thumb:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 0px 1px 0px rgba(0,0,0,.5);
+  }
+
+.color-background {
+  padding-top: 50px;
+}
+
+.color-foreground {
+  padding-top: 30px;
+}
+
+ /* HERO: DESKTOP */
+ 
+ @media (max-width: 820px) {
+  .mobile {
+    display: block;
+  }
+  .desktop {
+    display: none;
+  }
+ }
+  @media (min-width: 820px) {
+.logopack {
+  padding-left: 10vw;
+}
+
+.hero {
+  padding-left: 10vw;
+  padding-right: 10vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+    .lead {
+      font-size: 72px;
+      line-height: 100px;
+    }
+    .leadline {
+      font-size: 21px;
+      line-height: 30px;
+      max-width: 660px;
+    }
+}
+
+
+@media (min-width: 480px) and (max-width: 820px) {
+  .lead {
+    font-size: 52px;
+    line-height: 64px;
+  }
+  .leadline {
+    font-size: 16px;
+    line-height: 24px;
+    max-width: 450px;
+  }
+}
