--- a/main.css
+++ b/main.css
@@ -180,6 +180,8 @@ aside {
  position: relative;
  display: flex;
  flex-direction: column;
+ margin-left: 50px;
+ margin-top: 100px;
 }
 
 .rater-wrapper {
@@ -190,13 +192,13 @@ aside {
 
 
 .rating {
-  -webkit-text-stroke: 2px white;
+  -webkit-text-stroke: 3px white;
   font-family: FiraSans-Black;
   font-size: 150px;
   color: rgba(0,122,255,0.00);
   letter-spacing: 20px;
   text-align: right;
-   position: absolute;
+  position: absolute;
 }
 
 
@@ -207,16 +209,18 @@ aside {
 }
 
 .color-input {
-	width: 95px;
+  width: 100px;
+  height: 25px;
 	background: #464646;
 	border: 1px solid #222;
 	box-shadow: 0 0 2px 0 rgba(0,0,0,0.20);
-	border-radius: 14.5px;
+	border-radius: 30px;
 	padding-top: 6px;
-	padding-bottom: 6px;
+  padding-bottom: 6px;
+  opacity: 0.95;
 	/* Input Font */
 	font-family: SFUIDisplay-Medium;
-	font-size: 13px;
+	font-size: 16px;
 	color: #fff;
 	text-transform: uppercase;
 	letter-spacing: -0.08px;
@@ -236,11 +240,15 @@ input[type='range'] {
 	margin-top: 20px;
 	appearance: none;
 	border-radius: 3em;
-	height: 2em;
-	width: 200px;
+	height: 2.5em;
+	width: 250px;
 	/* border: 2px #fff solid;  */
 	box-shadow: 0px 0px 10px 0px rgba(0,0,0,.25);
 	background: linear-gradient(to right,  #000000 0%,#0A7FFF 50%,#ffffff 100%);
+  }
+
+  .slider-black {
+    background: linear-gradient(to right,  #000000 0%, #ffffff 100%);
   }
   
   input:focus {
@@ -249,12 +257,12 @@ input[type='range'] {
 
   input[type='range']::-webkit-slider-thumb {
     -webkit-appearance: none !important;
-	background: white;
-	/* border: 2px white solid; */
+    /* background: white; */
+    border: 2px white solid;
     border-radius: 100%;
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,.25);
-    height: 2em;
-    width: 2em;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,.3);
+    height: 2.5em;
+    width: 2.5em;
     transition: all 250ms ease-in-out;
 }
 
@@ -264,16 +272,37 @@ input[type='range']::webkit-slider-thumb:hover {
   }
 
 .color-background {
-  padding-top: 50px;
+  padding-top: 70px;
 }
 
 .color-foreground {
   padding-top: 30px;
 }
 
+.dot-rating {
+  position: absolute; 
+  display: flex;
+  left: -45px;
+  top: -20px;
+  z-index: 1;
+}
+
+.dot-aligner {
+  margin: -2px;
+  left: -50px;
+  top: -20px;
+}
+
  /* HERO: DESKTOP */
  
  @media (max-width: 820px) {
+
+
+  
+  .rater {
+    display: none;
+  }
+
   .mobile {
     display: block;
   }
@@ -309,12 +338,12 @@ input[type='range']::webkit-slider-thumb:hover {
 
 @media (min-width: 480px) and (max-width: 820px) {
   .lead {
-    font-size: 52px;
-    line-height: 64px;
+    font-size: 68px;
+    line-height: 75px;
   }
   .leadline {
-    font-size: 16px;
-    line-height: 24px;
-    max-width: 450px;
+    font-size: 21px;
+    line-height: 30px;
+    max-width: 500px;
   }
 }
