--- a/main.css
+++ b/main.css
@@ -314,8 +314,79 @@ input[type='range']::webkit-slider-thumb:hover {
   top: -10vh;
 }
 
+/* FEATURES */
 
- /* HERO: DESKTOP */
+.features {
+  padding-right: 30px;
+  padding-left: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 2;
+  margin-top: 100px;
+}
+
+.head {
+  font-family: FiraSans-Bold;
+  font-size: 24px;
+  color: #262626;
+  letter-spacing: 0;
+  text-align: center;
+}
+
+.subhead {
+  font-family: FiraSans-Medium;
+  font-size: 16px;
+  color: #797979;
+  letter-spacing: 0;
+  line-height: 20px;
+  text-align: center;
+  max-width: 550px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.feature-duo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flag {
+  font-family: FiraSans-SemiBold;
+  font-size: 17px;
+  color: #0A7FFF;
+  letter-spacing: 0;
+  text-align: center;
+}
+
+.txt-flag {
+  font-family: FiraSans-Regular;
+  font-size: 16px;
+  color: #262626;
+  letter-spacing: 0;
+  text-align: center;
+  line-height: 21px;
+  max-width: 200px;
+  margin-top: 5px;
+  margin-bottom: 40px;
+}
+
+.img-feature {
+  margin-bottom: 20px;
+  max-width: 320px;
+}
+
+
+
+
+
+
+
+
+
+
+ /* DESKTOP + TABLET */
  
  @media (max-width: 820px) {
 
@@ -367,6 +438,57 @@ input[type='range']::webkit-slider-thumb:hover {
       line-height: 30px;
       max-width: 660px;
     }
+
+
+  .feature-duo {
+    flex-direction: row;
+    margin-top: 50px;
+  }
+
+  .img-right {
+    flex-direction: row-reverse;
+  }
+
+.head {
+  font-family: FiraSans-Bold;
+  font-size: 38px;
+  color: #262626;
+  letter-spacing: 0;
+  text-align: center;
+}
+
+.subhead {
+  font-family: FiraSans-Medium;
+  font-size: 24px;
+  color: #797979;
+  letter-spacing: 0;
+  line-height: 32px;
+  text-align: center;
+  max-width: 800px;
+}
+
+  .flag {
+    text-align: left;
+    font-family: FiraSans-SemiBold;
+    font-size: 24px;
+    color: #0A7FFF;
+    letter-spacing: 0;
+  }
+
+  .txt-flag {
+    text-align: left;
+    font-family: FiraSans-Regular;
+    font-size: 24px;
+    color: #262626;
+    letter-spacing: 0;
+    line-height: 32px;
+    max-width: 350px;
+  }
+
+  .txt-feature {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
 }
 
 
@@ -392,31 +514,27 @@ input[type='range']::webkit-slider-thumb:hover {
   .dd3 {
     display: block;
   }
+
+  .feature-duo {
+    flex-direction: row;
+    margin-top: 30px;
+  }
+
+  .img-right {
+    flex-direction: row-reverse;
+  }
+
+  .flag {
+    text-align: left;
+  }
+
+  .txt-flag {
+    text-align: left;
+  }
+
+  .txt-feature {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
 }
 
-.features {
-  padding-right: 30px;
-  padding-left: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  z-index: 2;
-  margin-top: 100px;
-}
-
-.head {
-  font-family: FiraSans-Bold;
-  font-size: 24px;
-  color: #262626;
-  letter-spacing: 0;
-  text-align: center;
-}
-
-.subhead {
-  font-family: FiraSans-Medium;
-  font-size: 16px;
-  color: #797979;
-  letter-spacing: 0;
-  text-align: center;
-  max-width: 550px;
-}
