--- a/main.css
+++ b/main.css
@@ -331,7 +331,6 @@ input[type='range']::webkit-slider-thumb:hover {
   font-size: 24px;
   color: #262626;
   letter-spacing: 0;
-  text-align: center;
 }
 
 .subhead {
@@ -379,12 +378,45 @@ input[type='range']::webkit-slider-thumb:hover {
 
 
 /* MISSION */
+.mission {
+  margin-top: 40px;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  display: flex;
+  flex-direction: column;
+  background-color: #E3EFFE;
+}
 
+.u-txt-l {
+  text-align: left;
+}
 
+.u-txt-c {
+  text-align: center;
+}
 
+.link {
+  font-family: FiraSans-Medium;
+  font-size: 18px;
+  color: #262626;
+  letter-spacing: 0;
+}
 
+.txt-mission {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top:40px;
+}
 
+.link-wrapper {
+  padding-bottom: 15px;
+  border-bottom: 4px #0A7FFF solid;
+}
 
+.u-blue {
+  color: #0A7FFF;
+}
 
  /* DESKTOP + TABLET */
  
@@ -463,7 +495,7 @@ input[type='range']::webkit-slider-thumb:hover {
   color: #797979;
   letter-spacing: 0;
   line-height: 32px;
-  text-align: center;
+  align-self: center;  
   max-width: 800px;
 }
 
@@ -490,6 +522,7 @@ input[type='range']::webkit-slider-thumb:hover {
     margin-left: 20px;
   }
 }
+
 
 
 @media (min-width: 480px) and (max-width: 820px) {
