--- a/main.css
+++ b/main.css
@@ -191,6 +191,9 @@ aside {
   justify-content: flex-end;
 }
 
+.rater {
+  z-index: 10;
+}
 
 .rating {
   -webkit-text-stroke: 3px white;
@@ -238,14 +241,15 @@ input[type='range'] {
   }
   
   .slider-input {
-	margin-top: 20px;
-	appearance: none;
-	border-radius: 3em;
-	height: 2.5em;
-	width: 250px;
-	/* border: 2px #fff solid;  */
-	box-shadow: 0px 0px 10px 0px rgba(0,0,0,.25);
-	background: linear-gradient(to right,  #000000 0%,#0A7FFF 50%,#ffffff 100%);
+
+    margin-top: 20px;
+    appearance: none;
+    border-radius: 3em;
+    height: 2.5em;
+    width: 250px;
+    /* border: 2px #fff solid;  */
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,.25);
+    background: linear-gradient(to right,  #000000 0%,#0A7FFF 50%,#ffffff 100%);
   }
 
   .slider-black {
@@ -380,8 +384,8 @@ input[type='range']::webkit-slider-thumb:hover {
 /* MISSION */
 .mission {
   margin-top: 40px;
-  padding-top: 80px;
-  padding-bottom: 80px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   display: flex;
   flex-direction: column;
   background-color: #E3EFFE;
@@ -397,7 +401,7 @@ input[type='range']::webkit-slider-thumb:hover {
 
 .link {
   font-family: FiraSans-Medium;
-  font-size: 18px;
+  font-size: 16px;
   color: #262626;
   letter-spacing: 0;
 }
@@ -410,12 +414,31 @@ input[type='range']::webkit-slider-thumb:hover {
 }
 
 .link-wrapper {
-  padding-bottom: 15px;
+  padding-bottom: 10px;
   border-bottom: 4px #0A7FFF solid;
 }
 
 .u-blue {
   color: #0A7FFF;
+}
+
+/* ISSUE */
+
+.issue {
+  margin-top: 40px;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* FOOTER */
+
+footer {
+  background-color: #262626;
+  height: 200px;
+  width: auto;
 }
 
  /* DESKTOP + TABLET */
@@ -486,7 +509,7 @@ input[type='range']::webkit-slider-thumb:hover {
   font-size: 38px;
   color: #262626;
   letter-spacing: 0;
-  text-align: center;
+  text-align: left;
 }
 
 .subhead {
@@ -521,6 +544,23 @@ input[type='range']::webkit-slider-thumb:hover {
     margin-right: 20px;
     margin-left: 20px;
   }
+
+  .link {
+    font-size: 24px;
+  }
+
+.mission {
+  flex-direction: row;
+  justify-content: center;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.txt-mission {
+  align-items: flex-start;
+  margin-left: 30px;
+}
+
 }
 
 
