--- a/main.css
+++ b/main.css
@@ -10,14 +10,14 @@ html {
     display: none;
     position: fixed;
     width: 100%;
-    top: 0;
+    top: 75px;
   }
   .mobile div {
     display: none;
   }
   .mobile button {
     position: absolute;
-    top: 20px;
+    top: -50px;
     right: 20px;
     border: 0;
     text-indent: 200%;
@@ -36,7 +36,12 @@ html {
     border: 0;
   }
   .mobile a {
+    font-size: 32px;
     display: block;
+    background-color: #0A7FFF;
+    border-bottom: 1px white solid;
+    box-shadow: 0 20px 20px 0 rgba(0,0,0,0.4);
+    transition: 1s ease-in-out;
   }
   a {
     /* background: #262626; */
@@ -437,8 +442,60 @@ input[type='range']::webkit-slider-thumb:hover {
 
 footer {
   background-color: #262626;
-  height: 200px;
+  height: 400px;
   width: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 40px;
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.ygis-copyright {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+  margin-top: 50px;
+}
+ 
+.logo-ygis {
+  margin-bottom: 10px;
+}
+
+.footer-copyright {
+  opacity: 0.75;
+  font-family: FiraSans-SemiBold;
+  font-size: 14px;
+  color: #FFFFFF;
+  letter-spacing: 0;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.footer-link {
+  opacity: 0.9;
+  font-family: FiraSans-SemiBold;
+  font-size: 14px;
+  color: #FFFFFF;
+  letter-spacing: 0;
+  text-align: center;
+  line-height: 32px;
+  text-decoration: underline;
+  /* margin-top: 30px; */
+}
+
+.createdby-desktop {
+  display: none;
 }
 
  /* DESKTOP + TABLET */
@@ -550,7 +607,7 @@ footer {
   }
 
 .mission {
-  flex-direction: row;
+  flex-direction: row-reverse;
   justify-content: center;
   padding-top: 80px;
   padding-bottom: 80px;
@@ -559,6 +616,36 @@ footer {
 .txt-mission {
   align-items: flex-start;
   margin-left: 30px;
+}
+
+footer {
+  flex-direction: row-reverse;
+  justify-content: space-around;
+  padding-bottom: 0;
+  height: 250px;
+}
+
+.footer-links {
+  flex-direction: row;
+
+}
+
+.createdby {
+display: none;
+}
+
+.createdby-desktop {
+  display: block;
+  opacity: 1;
+}
+
+.footer-link {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.ygis-copyright {
+  order: 2;
 }
 
 }
@@ -609,5 +696,9 @@ footer {
     margin-right: 20px;
     margin-left: 20px;
   }
+
+
+  
+
 }
 
