Make header fixed.

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,15 @@ html {
 
 /* NAVIGATION */
 
+.nav-wrapper {
+  width: 100%;
+  position: fixed;
+  padding-bottom: 80px;
+  background-color: #0A7FFF;
+  z-index: 100;
+  border-radius: 0 0 0 100px;
+}
+
   .mobile {
     display: none;
     position: fixed;
