Add hover effect to nav bar.

--- a/styles/main.css
+++ b/styles/main.css
@@ -46,16 +46,18 @@ html {
   a {
     /* background: #262626; */
     text-align: center;
-    padding: 20px 0;
-    /* border-bottom: 1px solid #ddd; */
+    padding: 23.25px 0;
     text-decoration: none;
     color: white;
     font-weight: bold;
+    transition: .1s ease-in-out;
   }
-  a:hover,
-  a:active,
-  a:focus {
-    background: #e7e7e7;
+  a:hover
+ 
+  {
+    border-bottom: 4px solid #FAAF40;
+    transition: .1s ease-in-out;
+    /* background: #e7e7e7; */
   }
   .desktop {
     top: 13px;
@@ -69,7 +71,7 @@ html {
 
   .desktop a {
     box-sizing: border-box;
-    padding-left: 30px;
+    margin-left: 30px;
     opacity: 0.9;
     font-family: FiraSans-SemiBold;
     font-size: 16px;
@@ -116,24 +118,24 @@ html {
   letter-spacing: 0.4pt;
   }
 
-  .lead {
-    font-family: FiraSans-ExtraBold;
-    font-size: 48px;
-    color: #FFFFFF;
-    letter-spacing: 0;
-    line-height: 52px;
-    margin-top: 100px;
-      
-  }
+.lead {
+  font-family: FiraSans-ExtraBold;
+  font-size: 48px;
+  color: #FFFFFF;
+  letter-spacing: 0;
+  line-height: 52px;
+  /* margin-top: 100px; */
+    
+}
 
-  .leadline {
-    font-family: FiraSans-Regular;
+.leadline {
+  font-family: FiraSans-Regular;
   font-size: 14px;
   line-height: 20px;
   color: #FFFFFF;
   letter-spacing: 0;
   margin-top: 15px;
-  }
+}
 
   .underbtn {
   font-size: 11px;
@@ -339,6 +341,7 @@ input[type='range']::webkit-slider-thumb:hover {
   font-family: FiraSans-Bold;
   font-size: 24px;
   color: #262626;
+  margin-top: 50px;
   letter-spacing: 0;
 }
 
@@ -624,7 +627,7 @@ footer {
   }
 
 .mission {
-  flex-direction: row-reverse;
+  flex-direction: row;
   justify-content: center;
   padding-top: 80px;
   padding-bottom: 80px;
@@ -633,6 +636,7 @@ footer {
 .txt-mission {
   align-items: flex-start;
   margin-left: 30px;
+  margin-top: 0;
 }
 
 .img-mission {
