--- a/styles/main.css
+++ b/styles/main.css
@@ -189,7 +189,7 @@ aside {
  display: flex;
  flex-direction: column;
  margin-left: 50px;
- margin-top: 100px;
+ /* margin-top: 100px; */
 }
 
 .rater-wrapper {
@@ -205,10 +205,11 @@ aside {
 .rating {
   -webkit-text-stroke: 3px white;
   font-family: FiraSans-Black;
-  font-size: 150px;
+  font-size: 180px;
   color: rgba(0,122,255,0.00);
   letter-spacing: 20px;
   text-align: right;
+  /* margin-bottom:20px; */
   position: absolute;
 }
 
@@ -249,11 +250,11 @@ input[type='range'] {
   
   .slider-input {
 
-    margin-top: 20px;
     appearance: none;
     border-radius: 3em;
-    height: 2.5em;
-    width: 250px;
+    height: 3em;
+    margin-right: 20px;
+    width: 270px;
     /* border: 2px #fff solid;  */
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,.25);
     background: linear-gradient(to right,  #000000 0%,#0A7FFF 50%,#ffffff 100%);
@@ -273,8 +274,8 @@ input[type='range'] {
     border: 2px white solid;
     border-radius: 100%;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,.3);
-    height: 2.5em;
-    width: 2.5em;
+    height: 3em;
+    width: 3em;
     transition: all 250ms ease-in-out;
 }
 
@@ -285,16 +286,20 @@ input[type='range']::webkit-slider-thumb:hover {
 
 .color-background {
   padding-top: 70px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
 }
 
-.color-foreground {
+/* .color-foreground {
   padding-top: 30px;
-}
+} */
 
 .dot-rating {
   position: absolute; 
   display: flex;
-  left: -45px;
+  /* left: -45px; */
   top: -20px;
   z-index: 1;
 }
@@ -325,6 +330,10 @@ input[type='range']::webkit-slider-thumb:hover {
   top: -9.5vh;
 }
 
+#imgPass {
+  height: 150px;
+}
+
 /* FEATURES */
 
 .features {
@@ -334,7 +343,7 @@ input[type='range']::webkit-slider-thumb:hover {
   flex-direction: column;
   align-items: center;
   z-index: 2;
-  margin-top: 100px;
+  /* margin-top: 100px; */
 }
 
 .head {
