--- a/styles/main.css
+++ b/styles/main.css
@@ -168,7 +168,44 @@ html {
   text-align: center;
   width: 240px;
   height: 55px;
+  box-shadow:         inset 0 -4px 0 #C87D0E;
+  transition: .3s ease-in-out;
  }
+
+ .btn-dl:after {
+  content: '  💙';
+  color: black;
+  position: absolute;
+  font-size: 0;  
+  /* top: 14px; */
+  right: 610px;
+  transition: 0.5s;
+}
+
+.btn-dl:hover{
+  padding-right: 24px;
+  padding-left:8px;
+  transition: 0.5s;
+  /* box-shadow: 0 4px 0px 0 rgba(250,174,64,0.5); */
+}
+
+.btn-dl:active{
+  padding-right: 24px;
+  padding-left:8px;
+  /* transition: 0.2s; */
+  transform: translateY(2px);
+  box-shadow:         inset 0 -2px 0 #C87D0E;
+  outline: none;
+}
+
+.btn-dl:focus {
+  outline: none;
+}
+
+.btn-dl:hover:after {
+  font-size: 15px;
+  right: 620px;
+}
 
  .btn-git {
   background: url("/img/github.png") center no-repeat;
@@ -319,6 +356,12 @@ input[type='range']::webkit-slider-thumb:hover {
   transform: translate(-50%, 0%);
 }
 
+.shoo {
+  z-index: -10;
+  left:29.25%;
+  top:85vh;
+}
+
 .dot-white {
   display: flex;
 }
@@ -342,7 +385,7 @@ input[type='range']::webkit-slider-thumb:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 2;
+  z-index: 10;
   /* margin-top: 100px; */
 }
 
@@ -350,7 +393,6 @@ input[type='range']::webkit-slider-thumb:hover {
   font-family: FiraSans-Bold;
   font-size: 24px;
   color: #262626;
-  margin-top: 50px;
   letter-spacing: 0;
 }
 
@@ -370,6 +412,10 @@ input[type='range']::webkit-slider-thumb:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.u-margin-top-150 {
+  margin-top: 150px;
 }
 
 .flag {
@@ -735,4 +781,8 @@ display: none;
   
 
 }
+
+
+
+/* BUTTON EFFECTS */
 
