Align Mission items to the center.

--- a/styles/main.css
+++ b/styles/main.css
@@ -687,6 +687,7 @@ footer {
 .mission {
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   padding-top: 80px;
   padding-bottom: 80px;
 }
