--- a/styles/main.css
+++ b/styles/main.css
@@ -382,7 +382,6 @@ input[type='range']::webkit-slider-thumb:hover {
   flex-direction: column;
   align-items: center;
   z-index: 10;
-  /* margin-top: 100px; */
 }
 
 .head {
@@ -779,6 +778,11 @@ display: none;
   .dd3 {
     display: block;
   }
+
+  .dot-blue {
+    left: -37vh;
+  }
+
 
   .feature-duo {
     flex-direction: row;
