Remove AOS offset entirely & add cluseio in img

--- a/styles/main.css
+++ b/styles/main.css
@@ -201,7 +201,7 @@ body {
 }
 
  .btn-git {
-  background: url(img/github.png) center no-repeat;
+  background: url(cluseio/img/github.png) center no-repeat;
   border: 0;
   width: 55px;
   height: 55px;
