--- a/styles/main.css
+++ b/styles/main.css
@@ -14,7 +14,7 @@
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
-	background: url(/img/loader.gif) center no-repeat #fff;
+	background: url(../img/loader.gif) center no-repeat #fff;
 }
   
 
