Add styling to button at 320px.

--- a/styles/button.css
+++ b/styles/button.css
@@ -347,3 +347,11 @@
      font-size: 13px;
     }
   }
+
+/* Smallest Screens */
+@media (max-width: 380px) {
+  .button ul {
+    font-size: 11px;
+    padding: 16px 20px;
+   }
+}
