Make subhead type weight 500 & flip mission img.

--- a/styles/main.css
+++ b/styles/main.css
@@ -387,9 +387,9 @@ input[type='range']::webkit-slider-thumb:hover {
 
 .subhead {
   font-family: 'Fira Sans', sans-serif;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 16px;
-  color: #797979;
+  color: #6B6B6B;
   letter-spacing: 0;
   line-height: 20px;
   text-align: center;
@@ -419,7 +419,7 @@ input[type='range']::webkit-slider-thumb:hover {
 
 .txt-flag {
   font-family: 'Fira Sans', sans-serif;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 16px;
   color: #262626;
   letter-spacing: 0;
@@ -668,7 +668,7 @@ footer {
 
 .subhead {
   font-size: 24px;
-  color: #797979;
+  color: #6B6B6B;
   letter-spacing: 0;
   line-height: 32px;
   align-self: center;  
@@ -705,7 +705,7 @@ footer {
   }
 
 .mission {
-  flex-direction: row;
+  flex-direction: row-reverse;
   justify-content: center;
   align-items: center;
   padding-top: 80px;
